commerce-client/deploy/istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: commerce-client-destination
spec:
  host: commerce-client
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: commerce-client-route
spec:
  hosts:
    - "*"
  gateways:
    - commerce-gateway
  http:
    - route:
      - destination:
          host: commerce-client
          port:
            number: 10078
          subset: v2
        weight: 80
      - destination:
          host: commerce-client
          port:
            number: 10078
          subset: v1
        weight: 20
#      timeout: 0.5s # - to enable if using Istio fault on commerce-biz-customer route
